--- a/travel_blog/src/Map.css
+++ b/travel_blog/src/Map.css
@@ -2,15 +2,17 @@
   height: 1000px;
 }
 
-/* .sidebar {
-  background-color: rgba(35, 55, 75, 0.9);
+.sidebar {
+  background-color: #48c78e;
   color: #fff;
   padding: 6px 12px;
   font-family: monospace;
   z-index: 1;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   margin: 12px;
   border-radius: 4px;
-} */
+  border-color: rgba(35, 55, 75, 0.9);
+  border-style: solid;
+}
