--- a/travel_blog/src/Map.css
+++ b/travel_blog/src/Map.css
@@ -3,3 +3,31 @@
   border: none;
   cursor: pointer;
 }
+
+.mapboxgl-popup-close-button {
+  /* position: absolute;
+  right: 32px;
+  top: 32px; */
+  width: 32px;
+  height: 32px;
+  opacity: 0.3;
+}
+
+.mapboxgl-popup-close-button:hover {
+  opacity: 1;
+}
+.mapboxgl-popup-close-button:before,
+.mapboxgl-popup-close-button:after {
+  position: absolute;
+  left: 15px;
+  content: " ";
+  height: 33px;
+  width: 2px;
+  background-color: #333;
+}
+.mapboxgl-popup-close-buttone:before {
+  transform: rotate(45deg);
+}
+.mapboxgl-popup-close-button:after {
+  transform: rotate(-45deg);
+}
